# VTK_Engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  requirements.txt
Scripts/local/: run.bat  runCurve.bat  runEight.bat  runServerHotspot.bat
Scripts/silo/: runServerSilo.bat  silo1.bat  silo2.bat  silo4.bat  silo5.bat  silo6.bat  siloRun.bat
Server_UI/: app.py  app.spec  runServer.bat
Server_UI/app/: __init__.py  routes.py  sockets.py  udp_listener.py
Server_UI/static/css/: style.css
Server_UI/static/js/: cameraControls.js  cameraInteraction.js  clientList.js  colorEditor.js  flexCurvature.js  joystick.js  movementButtons.js  opacityEditor.js  websocketSend.js
Server_UI/templates/: index.html
VTK_Engine/: CMakeLists.txt  VTK_Engine.cpp  VTK_Engine.h
VTK_Engine/include/: config.h
VTK_Engine/include/app/: app.h  window.h
VTK_Engine/include/camera/: camera.h
VTK_Engine/include/interaction/: client.h  frontendData.h  interactor.h
VTK_Engine/include/reader/: reader.h
VTK_Engine/include/volume/: mapper.h  outline.h  property.h  slice.h  volume.h
VTK_Engine/src/: main.cpp
VTK_Engine/src/app/: app.cpp  window.cpp
VTK_Engine/src/camera/: camera.cpp
VTK_Engine/src/interaction/: client.cpp  easywsclient.cpp  frontendData.cpp  interactor.cpp
VTK_Engine/src/reader/: reader.cpp
VTK_Engine/src/utils/websocket/: easywsclient.cpp
VTK_Engine/src/volume/: mapper.cpp  outline.cpp  property.cpp  slice.cpp  volume.cpp
